--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,32 +1,37 @@
 <div class="page-content">
     <!-- Page title -->
+    
     <div class="page-title">
         <div class="row justify-content-between align-items-center">
-            <div class="col-md-6 d-flex align-items-center justify-content-between justify-content-md-start mb-3 mb-md-0">
+            <div class="col-6 d-flex align-items-center justify-content-between justify-content-md-start mb-3 mb-md-0">
                 <!-- Page title + Go Back button -->
                 <div class="d-inline-block">
                     <h5 class="h4 d-inline-block font-weight-400 mb-0 text-white">Ürünler </h5>
                 </div>
             </div>
-            <div class="col-md-6 d-flex align-items-center justify-content-between justify-content-md-end">
+            <div class="col-6 d-flex align-items-center justify-content-between justify-content-md-end">
 
 
                 <!-- Filter input -->
-                <form class="bg-neutral rounded-pill d-inline-block">
+                <div class="bg-neutral rounded-pill d-inline-block">
                     <div class="input-group input-group-sm input-group-merge input-group-flush">
                         <div class="input-group-prepend">
                             <span class="input-group-text bg-transparent"><i class="fas fa-filter"></i></span>
                         </div>
-                        <input type="text" class="form-control form-control-flush" placeholder="Filter results">
+                        <input [(ngModel)]="searchKey" (ngModelChange)="modelChangeFn(searchKey)" type="text" class="form-control form-control-flush" placeholder="Filter results">
                     </div>
-                </form>
+                </div>
 
             </div>
         </div>
     </div>
-    <div class="row">
-        <div *ngFor="let item of items" class="col-6 col-sm-6 col-md-2">
-            <div class="card hover-shadow-lg">
+    <div class="mt-3">
+
+   
+    <div *ngIf="productid" class="row">
+        
+        <div *ngFor="let item of items"  class="col-6 col-sm-6 col-md-2">
+            <div *ngIf="item.category==productid" class="card hover-shadow-lg">
 
                 <div class="card-body text-center">
                     <a class="img-thumbnail hover-translate-y-n3">
@@ -44,7 +49,34 @@
 
             </div>
         </div>
+      
+      
     </div>
+    <div *ngIf="!productid" class="row">
+        
+        <div *ngFor="let item of items"  class="col-6 col-sm-6 col-md-2">
+            <div class="card hover-shadow-lg">
+
+                <div class="card-body text-center">
+                    <a class="img-thumbnail hover-translate-y-n3">
+                        <img alt="Image placeholder" src="{{item.icon}}" class="img-fluid">
+                    </a>
+                </div>
+                <div class="card-footer">
+
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div>
+                            <h6 [routerLink]="['/detail','3' ]" class="mb-2">{{item.name}}</h6>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+      
+      
+    </div>
+</div>
     <!-- Load more -->
     <div class="mt-4 text-center">
         <a class="btn btn-sm btn-neutral rounded-pill shadow hover-translate-y-n3">Load more ...</a>
