--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -28,9 +28,11 @@
     <div class="mt-3">
 
    
-    <div *ngIf="productid" class="row">
-        
-        <div *ngFor="let item of items"  class="col-6 col-sm-6 col-md-2">
+    <div *ngIf="productid" >
+        <div *ngIf="!res" class="row">
+
+       
+        <div  *ngFor="let item of items"  class="col-6 col-sm-6 col-md-3">
             <div *ngIf="item.category==productid" class="card hover-shadow-lg">
 
                 <div class="card-body text-center">
@@ -38,23 +40,51 @@
                         <img alt="Image placeholder" src="{{item.icon}}" class="img-fluid">
                     </a>
                 </div>
+                
                 <div class="card-footer">
 
-                    <div class="d-flex justify-content-between align-items-center">
+                    <div class="d-flex justify-content-between align-items-start">
                         <div>
                             <h6 [routerLink]="['detail','3' ]" class="mb-2">{{item.name}}</h6>
+                            <span>Açıklama</span>
                         </div>
+                        <span class="ml-4 text-dark">5000 </span>
                     </div>
                 </div>
 
             </div>
         </div>
+    </div>
+        <div  *ngIf="res" class="row">
+        <div *ngFor="let item of res"  class="col-6 col-sm-6 col-md-2">
+            <div *ngIf="item.category==productid" class="card hover-shadow-lg">
+
+                <div class="card-body text-center">
+                    <a class="img-thumbnail hover-translate-y-n3">
+                        <img alt="Image placeholder" src="{{item.icon}}" class="img-fluid">
+                    </a>
+                </div>
+                
+                <div class="card-footer">
+
+                    <div class="d-flex justify-content-between align-items-start">
+                        <div>
+                            <h6 [routerLink]="['detail','3' ]" class="mb-2">{{item.name}}</h6>
+                            <span>Açıklama</span>
+                        </div>
+                        <span class="ml-4 text-dark">5000 </span>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
       
       
     </div>
-    <div *ngIf="!productid" class="row">
-        
-        <div *ngFor="let item of items"  class="col-6 col-sm-6 col-md-2">
+    <div *ngIf="!productid" >
+        <div *ngIf="!res" class="row">
+        <div  *ngFor="let item of items"  class="col-6 col-sm-6 col-md-2">
             <div class="card hover-shadow-lg">
 
                 <div class="card-body text-center">
@@ -64,16 +94,43 @@
                 </div>
                 <div class="card-footer">
 
-                    <div class="d-flex justify-content-between align-items-center">
+                    <div class="d-flex justify-content-between align-items-start">
                         <div>
-                            <h6 [routerLink]="['/detail','3' ]" class="mb-2">{{item.name}}</h6>
+                            <h6 [routerLink]="['/detail','3' ]" class="mb-1">{{item.name}}</h6>
+                            <span>Açıklama</span>
                         </div>
+                        <span class="ml-4 text-dark text-sm">5000 </span>
+                       
                     </div>
                 </div>
 
             </div>
         </div>
-      
+    </div>
+    <div *ngIf="res" class="row">
+        <div  *ngFor="let item of res"  class="col-6 col-sm-6 col-md-2">
+            <div class="card hover-shadow-lg">
+
+                <div class="card-body text-center">
+                    <a class="img-thumbnail hover-translate-y-n3">
+                        <img alt="Image placeholder" src="{{item.icon}}" class="img-fluid">
+                    </a>
+                </div>
+                <div class="card-footer">
+
+                    <div class="d-flex justify-content-between align-items-start">
+                        <div>
+                            <h6 [routerLink]="['/detail','3' ]" class="mb-2">{{item.name}}</h6>
+                            <span>Açıklama</span>
+                        </div>
+                        <span class="mb-2 text-dark text-sm">5000 TL</span>
+                       
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
       
     </div>
 </div>
