--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -123,7 +123,7 @@
                             <h6 [routerLink]="['/detail','3' ]" class="mb-2">{{item.name}}</h6>
                             <span>Açıklama</span>
                         </div>
-                        <span class="mb-2 text-dark text-sm">5000 TL</span>
+                        <span class="mb-2 text-dark text-sm">5000</span>
                        
                     </div>
                 </div>
